src/tests/Loader/classloader/StaticVirtualMethods/NegativeTestCases/AmbiguousImplementationException.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <!-- Needed for mechanical merging of all remaining tests, this particular project may not actually need process isolation -->
    <RequiresProcessIsolation>true</RequiresProcessIsolation>

    <!-- ActiveIssue https://github.com/dotnet/runtime/issues/97272 -->
    <NativeAotIncompatible>true</NativeAotIncompatible>
  </PropertyGroup>
  <PropertyGroup>
    <DebugType>Full</DebugType>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="AmbiguousImplementationException.il" />
  </ItemGroup>
</Project>
